# ONVIF

./: .gitignore  CMakeLists.txt  MediaBinding.nsmap  SOAP.h  generate.sh  onvif.h  soapClient.cpp  soapStub.h
gSOAP/: CMakeLists.txt
